@@ -75,6 +75,9 @@ IMPROVEMENTS:
 
    ZOOKEEPER-230. Improvements to FLE. (Flavio via mahadev)
 
+   ZOOKEEPER-225. c client should log an info message in zookeeper_init
+detailing connection parameters. (pat via mahadev)
+
 Release 3.0.0 - 2008-10-21
 
 Non-backward compatible changes:
